# ai-codebench

./: .gitignore  README.md  config.yaml  main.py  pyproject.toml  requirements.txt
ai_codebench/: __init__.py  archive.py  cli.py  config.py  conversation.py  conversation_store.py  logger.py  provider_manager.py  settings.py  task_router.py
ai_codebench/providers/: __init__.py  base.py  claude_provider.py  deepseek_provider.py  gemini_provider.py  hunyuan_provider.py  imagen_provider.py  kimi_provider.py  openai_compatible.py  openrouter_provider.py
