[project]
name = "ai-codebench"
version = "1.0.0"
description = "Default template for PDM package"
authors = [
    {name = "Aegeaner", email = "xihuke@gmail.com"},
]
dependencies = [
    "openai>=1.51.0",
    "anthropic>=0.34.0",
    "google-genai>=1.56.0",
    "click>=8.1.0",
    "rich>=13.7.0",
    "pydantic>=2.5.0",
    "aiofiles>=24.1.0",
    "pyyaml>=6.0.0",
    "tencentcloud-sdk-python-aiart (>=3.1.14,<4.0.0)",
    "tencentcloud-sdk-python-common (>=3.1.15,<4.0.0)",
    "aiohttp (>=3.13.2,<4.0.0)",
]
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"


[tool.setuptools.packages.find]
where = ["."]
include = ["ai_codebench*"]
